--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,36 +1,65 @@
 <%- include('../partials/html-head') %>
-<%- include('../partials/nav') %>
+  <%- include('../partials/nav') %>
 
-<section>
-  <h1>We love video games here!</h1>
-  <% if (user) { %>
-    <h2>What are you playing today? Add your game here:</h2>
-    <form action="/games" method="POST">
-      <label for="title-input">Title:</label>
-      <input type="text" name="title" id="title-input">
-      <label for="platform-input">Platform:</label>
-      <input type="text" name="platform" id="platform-input">
-      <label for="completion-status-select">Status:</label>
-      <select name="completion-status" id="ompletion-status-select">
-        <option value="Complete">Complete</option>
-        <option value="Incomplete">Incomplete</option>
-        <option value="In-progress">In progress</option>
-      </select>
-      <button type="submit">Add 🕹️</button>
-    </form>
-  <% } %>
-  <h2>Full list of video games ever existed</h2>
-  <ul>
-    <% games.forEach(game => { %>
-      <tr>
-        <td>🕹️ <%= game.title %></td>
-        <td><%= game.platform %></td>
-        <td><%= game.releaseYear %></td>
-        <td><%= game.genre %></td>
-        <td><%= game.developer %></td>
-      </tr>
-    <% }) %>
-  </ul>
-</section>
+    <section>
+      <h1>We love video games here!</h1>
+      <% if (user) { %>
+        <h2>What are you playing today? Add your game here:</h2>
+        <form action="/games" method="POST">
+          <div class="form-group">
+            <label for="title-input">Title:</label>
+            <input type="text" name="title" id="title-input">
+          </div>
+          <div class="form-group">
+            <label for="platform-input">Platform:</label>
+            <input type="text" name="platform" id="platform-input">
+          </div>
+          <div class="form-group">
+            <label for="completion-status-select">Status:</label>
+            <select name="completion-status" id="completion-status-select">
+              <option value="Complete">Complete</option>
+              <option value="Incomplete">Incomplete</option>
+              <option value="In-progress">In progress</option>
+            </select>
+          </div>
+          <button type="submit">Add 🕹️</button>
+        </form>
+        <% } %>
+    </section>
+    <section>
+      <h2>Full list of video games ever existed</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Platform</th>
+            <th>Release Year</th>
+            <th>Genre</th>
+            <th>Developer</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% games.forEach(game=> { %>
+            <tr>
+              <td>
+                <%= game.title %>
+              </td>
+              <td>
+                <%= game.platform %>
+              </td>
+              <td>
+                <%= game.releaseYear %>
+              </td>
+              <td>
+                <%= game.genre %>
+              </td>
+              <td>
+                <%= game.developer %>
+              </td>
+            </tr>
+            <% }) %>
+        </tbody>
+      </table>
+    </section>
 
-<%- include('../partials/footer') %>
+    <%- include('../partials/footer') %>
