refactor the gameReviews model

--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/html-head') %>
-  <%- include('../partials/nav') %>
+<link rel="stylesheet" href="/public/stylesheets/style.css" />
+<%- include('../partials/nav') %>
 
     <section>
       <h1>We love video games here!</h1>
@@ -62,4 +63,4 @@
       </table>
     </section>
 
-    <%- include('../partials/footer') %>
+<%- include('../partials/footer') %>
