--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -50,22 +50,27 @@
               <option value="In-progress">In progress</option>
             </select>
           </div>
-          <h2>Reviews</h2>
-          <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
-            <label for="content-textarea">Write a review:</label>
-            <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
-            <label for="rating-select">Rating:</label>
-            <select name="rating" id="rating-select">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5" selected>5</option>
-            </select>
-            <button type="submit">Add Review</button>
-          </form>
-        </section>
-        <h2>Reviews</h2>
+          <% if (user) { %>
+            <form
+              id="add-review-form"
+              action="/games/<%= game._id %>/reviews"
+              method="POST"
+            >
+              <label for="content-textarea">Write a review:</label>
+              <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
+              <label for="rating-select">Rating:</label>
+              <select name="rating" id="rating-select">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5" selected>5</option>
+              </select>
+              <button type="submit">Add Review</button>
+            </form>
+          <% } else { %>
+            <p>You must be logged in to add a review.</p>
+          <% } %>
         <ul>
           <% game.reviews.forEach(review=> { %>
             <li>
