add editing and saving edits functionality

--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -9,6 +9,9 @@
         </p>
         <h1>🕹️ <%= game.title %>
         </h1>
+        <a href="/games/<%= game._id %>/edit">
+          <button>Edit Game</button>
+        </a>
         <section>
           <table class="game-details">
             <tr>
