--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -76,6 +76,7 @@
                       <% game.reviews.forEach(review => { %>
                         <li>
                           <%= review.text %> - <%= review.rating %>/5
+                          <% console.log('test', review.owner) %> 
                           <% if (user?.profile._id.equals(review.owner._id)) { %>
                             <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
                               <button>Edit Review</button>
