--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -1,30 +1,29 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<div class="wrapper">
-  <section>
-    <h1>Edit Review for 🕹️ <%= game.title %></h1>
-    <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=PUT" method="POST">
-      <div class="form-group">
-        <label for="content-textarea">Edit your review:</label>
-        <textarea name="text" id="content-textarea"><%= review.text %></textarea>
-      </div>
-      <div class="form-group">
-        <label for="rating-select">Rating:</label>
-        <select name="rating" id="rating-select">
-          <option value="1" <%= review.rating == 1 ? 'selected' : '' %>>1</option>
-          <option value="2" <%= review.rating == 2 ? 'selected' : '' %>>2</option>
-          <option value="3" <%= review.rating == 3 ? 'selected' : '' %>>3</option>
-          <option value="4" <%= review.rating == 4 ? 'selected' : '' %>>4</option>
-          <option value="5" <%= review.rating == 5 ? 'selected' : '' %>>5</option>
-        </select>
-      </div>
-      <button type="submit">Save Review</button>
-    </form>
-    <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-      <button type="submit">Delete Review</button>
-    </form>
-  </section>
-</div>
+    <section>
+      <h1>Edit Review for 🕹️ <%= game.title %>
+      </h1>
+      <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=PUT" method="POST">
+        <div class="form-group">
+          <label for="content-textarea">Edit your review:</label>
+          <textarea name="text" id="content-textarea"><%= review.text %></textarea>
+        </div>
+        <div class="form-group">
+          <label for="rating-select">Rating:</label>
+          <select name="rating" id="rating-select">
+            <option value="1" <%=review.rating==1 ? 'selected' : '' %>>1</option>
+            <option value="2" <%=review.rating==2 ? 'selected' : '' %>>2</option>
+            <option value="3" <%=review.rating==3 ? 'selected' : '' %>>3</option>
+            <option value="4" <%=review.rating==4 ? 'selected' : '' %>>4</option>
+            <option value="5" <%=review.rating==5 ? 'selected' : '' %>>5</option>
+          </select>
+        </div>
+        <button type="submit">Save Review</button>
+      </form>
+      <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
+        <button type="submit">Delete Review</button>
+      </form>
+    </section>
 
-<%- include('../partials/footer') %>
+    <%- include('../partials/footer') %>
