--- a/views/reviews/edit.ejs
+++ b/views/reviews/edit.ejs
@@ -21,8 +21,8 @@
         </div>
         <button type="submit">Save Review</button>
       </form>
-      <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-        <button type="submit">Delete Review</button>
+      <form action="/games/<%= game._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" onsubmit="return confirm('Are you sure you want to delete this review?')">
+        <button type="submit" class="delete-button">Delete Review</button>
       </form>
     </section>
 
