--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -42,27 +42,33 @@
         <form action="/games/<%= game._id %>?_method=DELETE" method="POST">
           <button type="submit">Delete 🕹️</button>
         </form>
-        <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
-          <label for="content-textarea">Write a review:</label>
-          <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
-          <label for="rating-select">Rating:</label>
-          <select name="rating" id="rating-select">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5" selected>5</option>
-          </select>
-          <button type="submit">Add Review</button>
-        </form>
+        <% if (user) { %>
+          <% if (!hasReviewed) { %>
+            <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
+              <label for="content-textarea">Write a review:</label>
+              <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
+              <label for="rating-select">Rating:</label>
+              <select name="rating" id="rating-select">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5" selected>5</option>
+              </select>
+              <button type="submit">Add Review</button>
+            </form>
+          <% } %>
+        <% } else { %>
+          <p>You must be logged in to add a review.</p>
+        <% } %>
         <ul>
           <% game.reviews.forEach(review=> { %>
             <li>
               <%= review.text %> - <%= review.rating %>/5
             </li>
-            <% }) %>
+          <% }) %>
         </ul>
       </section>
     </div>
-
+    
     <%- include('../partials/footer') %>
