--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -56,36 +56,38 @@
                 </select>
               </div>
               <% if (user) { %>
-                <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
-                  <label for="content-textarea">Write a review:</label>
-                  <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
-                  <label for="rating-select">Rating:</label>
-                  <select name="rating" id="rating-select">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5" selected>5</option>
-                  </select>
-                  <button type="submit">Add Review</button>
-                </form>
-                <% } else { %>
-                  <p>You must be logged in to add a review.</p>
-                  <% } %>
-                    <ul>
-                      <% game.reviews.forEach(review => { %>
-                        <li>
-                          <%= review.text %> - <%= review.rating %>/5
-                          <% console.log('test', review.owner) %> 
-                          <% if (user?.profile._id.equals(review.owner._id)) { %>
-                            <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
-                              <button>Edit Review</button>
-                            </a>
-                          <% } %>
-                        </li>
-                      <% }) %>
-                    </ul>
+                <% if (!hasReviewed) { %>
+                  <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
+                    <label for="content-textarea">Write a review:</label>
+                    <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
+                    <label for="rating-select">Rating:</label>
+                    <select name="rating" id="rating-select">
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5" selected>5</option>
+                    </select>
+                    <button type="submit">Add Review</button>
+                  </form>
+                <% } %>
+              <% } else { %>
+                <p>You must be logged in to add a review.</p>
+              <% } %>
+              <ul>
+                <% game.reviews.forEach(review => { %>
+                  <li>
+                    <%= review.text %> - <%= review.rating %>/5
+                    <% console.log('test', review.owner) %> 
+                    <% if (user?.profile._id.equals(review.owner._id)) { %>
+                      <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
+                        <button>Edit Review</button>
+                      </a>
+                    <% } %>
+                  </li>
+                <% }) %>
+              </ul>
             </section>
-    </div>
+        </div>
 
     <%- include('../partials/footer') %>
