add styling to game show page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -70,6 +70,10 @@ button {
   outline: none;
 }
 
+button:hover {
+  background-color: #F38BD3;
+}
+
 .styled-element {
   height: 48px;
   width: 180px;
