--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -1,92 +1,94 @@
 <%- include('../partials/html-head') %>
-  <link rel="stylesheet" href="/stylesheets/show.css" />
-  <%- include('../partials/nav') %>
+<link rel="stylesheet" href="/stylesheets/show.css" />
+<%- include('../partials/nav') %>
 
-    <div class="wrapper">
-      <section>
-        <p>
-          <%= game.owner.name %> added this game
-        </p>
-        <h1>🕹️ <%= game.title %>
-        </h1>
-        <% if (user?.profile._id.equals(game.owner._id)) { %>
-          <a href="/games/<%= game._id %>/edit">
-            <button>Edit Game</button>
-          </a>
-          <% } %>
-            <section>
-              <table class="game-details">
-                <tr>
-                  <th>Title:</th>
-                  <td>
-                    <%= game.title %>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Platform:</th>
-                  <td>
-                    <%= game.platform %>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Release Year:</th>
-                  <td>
-                    <%= game.releaseYear %>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Genre:</th>
-                  <td>
-                    <%= game.genre %>
-                  </td>
-                </tr>
-                <tr>
-                  <th>Developer:</th>
-                  <td>
-                    <%= game.developer %>
-                  </td>
-                </tr>
-              </table>
-              <div class="form-group">
-                <label for="completion-status-select">Status:</label>
-                <select name="completion-status" id="completion-status-select">
-                  <option value="Complete">Complete</option>
-                  <option value="Incomplete">Incomplete</option>
-                  <option value="In-progress">In progress</option>
+<div class="container">
+  <p>
+    <%= game.owner.name %> added this game
+  </p>
+  <h1 style="margin-bottom: 10px;">🕹️ <%= game.title %>
+  </h1> 
+  <% if (user?.profile._id.equals(game.owner._id)) { %>
+    <a href="/games/<%= game._id %>/edit">
+      <button>Edit Game</button>
+    </a>
+    <% } %>
+      <table class="game-details">
+        <tr>
+          <th style="text-align: left;">Title:</th> 
+          <td>
+            <%= game.title %>
+          </td>
+        </tr>
+        <tr>
+          <th style="text-align: left;">Platform:</th> 
+          <td>
+            <%= game.platform %>
+          </td>
+        </tr>
+        <tr>
+          <th style="text-align: left;">Release Year:</th> 
+          <td>
+            <%= game.releaseYear %>
+          </td>
+        </tr>
+        <tr>
+          <th style="text-align: left;">Genre:</th> 
+          <td>
+            <%= game.genre %>
+          </td>
+        </tr>
+        <tr>
+          <th style="text-align: left;">Developer:</th>
+          <td>
+            <%= game.developer %>
+          </td>
+        </tr>
+      </table>
+      <div class="form-group">
+        <label for="completion-status-select">Status:</label>
+        <br>
+        <select name="completion-status" id="completion-status-select" class="styled-element">
+          <option value="Complete">Complete</option>
+          <option value="Incomplete">Incomplete</option>
+          <option value="In-progress">In progress</option>
+        </select>
+      </div>
+          <% if (user) { %>
+            <% if (!hasReviewed) { %>
+              <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
+                <label for="content-textarea">Write a review:</label>
+                <br>
+                <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
+                <br> 
+                <label for="rating-select">Rating:</label>
+                <select name="rating" id="rating-select">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5" selected>5</option>
                 </select>
-              </div>
-              <% if (user) { %>
-                <% if (!hasReviewed) { %>
-                  <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
-                    <label for="content-textarea">Write a review:</label>
-                    <textarea name="text" id="content-textarea" placeholder="How was it?"></textarea>
-                    <label for="rating-select">Rating:</label>
-                    <select name="rating" id="rating-select">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5" selected>5</option>
-                    </select>
-                    <button type="submit">Add Review</button>
-                  </form>
-                <% } %>
-              <% } else { %>
-                <p>You must be logged in to add a review.</p>
+                <br>
+                <button type="submit">Add Review</button>
+              </form>
               <% } %>
-              <ul>
-                <% game.reviews.forEach(review => { %>
-                  <li>
-                    <%= review.text %> - <%= review.rating %>/5
-                    <% if (user?.profile._id.equals(review.owner._id)) { %>
-                      <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
-                        <button>Edit Review</button>
-                      </a>
-                    <% } %>
-                  </li>
-                <% }) %>
-              </ul>
-            </section>
-        </div>
-
-    <%- include('../partials/footer') %>
+                <% } else { %>
+                  <p>You must be logged in to add a review.</p>
+                  <% } %>
+                  <h3>Reviews:</h3> 
+                  <ul>
+                    <% game.reviews.forEach(review=> { %>
+                      <li>
+                        <%= review.text %> - <%= review.rating %>/5
+                            <% if (user?.profile._id.equals(review.owner._id)) { %>
+                              <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
+                                <button>Edit Review</button>
+                              </a>
+                              <% } %>
+                      </li>
+                      <% }) %>
+                  </ul>
+          </div>
+          
+          <%- include('../partials/footer') %>
