--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,17 @@
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="img img-logo"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <p>FUNventory<br/>
+        Made in 2023 by <a href="" target="_blank">Annie Kuxa</a><br/>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
