--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -8,37 +8,35 @@
           <%= game.owner.name %> added this game
         </p>
         <form action="/games/<%= game._id %>?_method=PUT" method="POST">
-          <div class="form-group">
-            <label for="title-input">Title:</label>
-            <input type="text" name="title" value="<%= game.title %>" id="title-input" class="styled-element">
+          <div class="form-group" style="margin-bottom: 20px;">
+            <label for="title-input" style="display: block; margin-bottom: 5px;">Title:</label>
+            <input type="text" name="title" value="<%= game.title %>" id="title-input" class="styled-element" style="margin-top: -3px;">
           </div>
-          <div class="form-group">
-            <label for="platform-input">Platform:</label>
-            <input type="text" name="platform" value="<%= game.platform %>" id="platform-input" class="styled-element">
+          <div class="form-group" style="margin-bottom: 20px;">
+            <label for="platform-input" style="display: block; margin-bottom: 5px;">Platform:</label>
+            <input type="text" name="platform" value="<%= game.platform %>" id="platform-input" class="styled-element" style="margin-top: -3px;">
           </div>
-          <div class="form-group">
-            <label for="releaseYear-input">Release Year:</label>
-            <input type="number" name="releaseYear" value="<%= game.releaseYear %>" id="releaseYear-input"
-              class="styled-element">
+          <div class="form-group" style="margin-bottom: 20px;">
+            <label for="releaseYear-input" style="display: block; margin-bottom: 5px;">Release Year:</label>
+            <input type="number" name="releaseYear" value="<%= game.releaseYear %>" id="releaseYear-input" class="styled-element" style="margin-top: -3px;">
           </div>
-          <div class="form-group">
-            <label for="genre-input">Genre:</label>
-            <input type="text" name="genre" value="<%= game.genre %>" id="genre-input" class="styled-element">
+          <div class="form-group" style="margin-bottom: 20px;">
+            <label for="genre-input" style="display: block; margin-bottom: 5px;">Genre:</label>
+            <input type="text" name="genre" value="<%= game.genre %>" id="genre-input" class="styled-element" style="margin-top: -3px;">
           </div>
-          <div class="form-group">
-            <label for="developer-input">Developer:</label>
-            <input type="text" name="developer" value="<%= game.developer %>" id="developer-input"
-              class="styled-element">
+          <div class="form-group" style="margin-bottom: 20px;">
+            <label for="developer-input" style="display: block; margin-bottom: 5px;">Developer:</label>
+            <input type="text" name="developer" value="<%= game.developer %>" id="developer-input" class="styled-element" style="margin-top: -3px;">
           </div>
-          <div class="form-group">
-            <label for="completion-status-select">Status:</label>
-            <select name="completion-status" id="completion-status-select" class="styled-element">
+          <div class="form-group" style="margin-bottom: 20px;">
+            <label for="completion-status-select" style="display: block; margin-bottom: 5px;">Status:</label>
+            <select name="completion-status" id="completion-status-select" class="styled-element" style="margin-top: -3px;">
               <option value="Complete" <%=game.status==='Complete' ? 'selected' : '' %>>Complete</option>
               <option value="Incomplete" <%=game.status==='Incomplete' ? 'selected' : '' %>>Incomplete</option>
               <option value="In-progress" <%=game.status==='In-progress' ? 'selected' : '' %>>In progress</option>
             </select>
           </div>
-
+        
           <button type="submit">Save 🕹️</button>
         </form>
         <form action="/games/<%= game._id %>?_method=DELETE" method="POST">
