--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -46,7 +46,9 @@
           <% if (!hasReviewed) { %>
             <form id="add-review-form" action="/games/<%= game._id %>/reviews" method="POST">
               <label for="content-textarea">Write a review:</label>
+              <br>
               <textarea name="text" id="content-textarea" placeholder="How was it?" class="styled-element"></textarea>
+              <br>
               <label for="rating-select">Rating:</label>
               <select name="rating" id="rating-select" class="styled-element">
                 <option value="1">1</option>
@@ -55,16 +57,23 @@
                 <option value="4">4</option>
                 <option value="5" selected>5</option>
               </select>
+              <br>
               <button type="submit">Add Review</button>
             </form>
             <% } %>
               <% } else { %>
                 <p>You must be logged in to add a review.</p>
                 <% } %>
+                  <h3>Reviews:</h3> 
                   <ul>
                     <% game.reviews.forEach(review=> { %>
                       <li>
                         <%= review.text %> - <%= review.rating %>/5
+                            <% if (user?.profile._id.equals(review.owner._id)) { %>
+                              <a href="/games/<%= game._id %>/reviews/<%= review._id %>/edit">
+                                <button>Edit Review</button>
+                              </a>
+                              <% } %>
                       </li>
                       <% }) %>
                   </ul>
