--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -1,9 +1,10 @@
 <%- include('../partials/html-head') %>
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-  <%- include('../partials/nav') %>
+<link rel="stylesheet" href="/stylesheets/style.css" />
+<%- include('../partials/nav') %>
 
-    <div class="flex-sticky-footer">
-      <div class="body-content">
+<div class="grid-wrapper"> <!-- Add this div -->
+  <div class="grid-content"> <!-- Add this div -->
+    <div class="body-content">
         <div class="row">
           <h1 class="center m-bottom font-heavy">We love video games here!</h1>
           <% if (user) { %>
@@ -70,7 +71,7 @@
             </div>
           </div>
         </div>
-      </div>
-
+      </div> 
+    
       <%- include('../partials/footer') %>
-    </div>
+    </div> 
