--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -60,7 +60,7 @@ button {
   text-align: center;
   color: #fff;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 900;
   background:#FE7880;
   border: 1px solid #fff;
   border-radius: 4px;
@@ -71,7 +71,13 @@ button {
 }
 
 button:hover {
-  background-color: #F38BD3;
+  background-image: linear-gradient(to top, #F38BD3, #FE7880);
+  border-color: transparent;
+}
+
+button:active {
+  transform: scale(0.95);
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .styled-element {
